references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/DefaultMultiplicity_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:e6e985c57f8398ada5ac381be0dc06e0edcf89376d5e0870a0e97debf1c5b2aa
size 3145
